sveFileDialog pro los

--- a/LosyForm.resx
+++ b/LosyForm.resx
@@ -166,6 +166,9 @@
         Qe97LP13JdF0t1QSZBNael0qj591WId1WId1WMf/x8HYvwGPljdIHajL/AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="generujLosSaveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAB+ZgAAZgAAAICAAAABACAAKAgBAORmAABAQAAAAQAgAChCAAAMbwEAMDAAAAEA
