--- a/MainForm.resx
+++ b/MainForm.resx
@@ -177,6 +177,116 @@
         eIlH11VL25hqPjSi/gRAKXjcXZ8enQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="tabulkyButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAjCAYAAAD8BaggAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAgTSURBVFhHzZdrbBTXFcdnF5IgQlEJoY3UpCSB0ISUtLRS
+        SikCp1KTgE0CDVFF1YgQ9Uv7IXUCqtoqkulX2kipX9ixSWxjAw3ExjyMidIKlaYP8TCvxPixu/O4M7Pz
+        Wr9wEMXs6f/Mw7vGazf5kKQffroz956d+59zz/3PXalo0wuxTfUnpZ/XdPysuKJzR0llZ1nxdFSE5F9P
+        w9rKEzuYEjz7mYrjZcz6kKff6Pj9T3a+U/a7XQeee6npb1LR81ti0nMvvyYtbRt9fWadSdJu53MnXm/R
+        nFqNVh8ZfmPjy6/FpM2/2Pbw/fs9kipT2Zk1yo0ZNcrY50qtekOqkrP37nVo8y+3PyqtfOGVoi81D2Sl
+        apniUPpFEMPcc1qGst/fsm2NVLSldNW8lgH6IgVh7uydLUO0Yuv2ImkNBH35/0fQmgmCZmDwfxE9pNBY
+        Pp80juG5WdD3XmRBL76yem7LoK9SqsHgdODHMX4AU2g8n1qBWOG3BcfzqVZo9t5h+sHW7aukb28uXTt/
+        j0d3VCWzd9UrtGC3SnfXT+YrYM6bCt1eo9LsWoXu5rgwdn5e3AIfFGmtTLNqZJqLdkEd4ieAWMD98+tk
+        zJ3Izm9yaNlPX31KkopLV9/eOEC3VSep7cM0JQ2bLqs2faTluKRYpJk2rT+sU7xcocV7NDqPvm5h04cY
+        j7gMusEF2aGHEDOzQqF1rSpd6RN0+oqgc0xPwBlcd6N/7xmDbqtK0qxGWA+0SLGS0sdjTf6S0ck+mz7O
+        uOTYDrmO6+MBy7Lo+qBDG4/BPMs1erBZkJG2KeM65DgOYgJckHFsEvj9/c26H7uuXZAnNErJglRFkIZW
+        pHANBlSFOi4o/pLFm4aItbCgFTNCQZ09Lg26LulmhkxrYBwt7dFwxqNnj7IgFYJ0ko0MWXaGDMtFTBBv
+        gDSuU6ZHD0C0VAFBhwRZikF9CZOSyRz9uDcVnQ5dQBxvKGhgLRMEneh1aNizyYQACw/mCRk97dLogEsb
+        /AwFglRM6tgepZENCy3HpYGNax7jLHKGSg5p5CgaJZKC5BReJCSZ1MlSNWovJCgeCer7LAQJcjV9GkG8
+        y6YQ9D4ydBU1ZFk8WQb1EWBiWT4e8MIaUmlRiw6RHrm2SzZqLIqz+TcsCC+wKBS0HoI8TfgCFAiJSPmC
+        BLVfNAoLiu+S6eG9gpb/WadvFeA77+h019vwll0aza7Xgv79k+MeA8vQP7sOngWPmfeWRo/t0+hRPPub
+        t7Bsn/BfjudmDZMESRUqSX+ahmq475uhmSFTBWMYHkOMH4sX4ExNCeacUtDKgwatPWzSk+0BT4Xtk+0G
+        rTti0teaggzN3a3Rjw7peeMTY4vadLoTWeTYexoQ2yqo6F1BT+TB9z9E/3eR+UmCol12KuHQzSGHhlyP
+        RrzMOAOwAlQ7bQpraHGLIAd1NZrJoNsdjxt2Myh+bALTooVN/PYabYAPXTN0f4vbao407kd0QZ2XC9RQ
+        JOh4jwMfsvFADzuNizlAMzEpiv3ZvF0mG7wTPXiPgxjEI87wd6ZHPbJJ9zUGgorZh1C8fYmgsCP6EyxS
+        o7bzn7EPcd8VTBgJCnxIfDofigR1IEO+9RsuPg389gEqvmNDnpPn1IJSiElj2XRkiN2a4wSEC3wLL/aq
+        9HXUW5AhjdL4XPQgQ/2cmZBeZEiXkaGuaQT9PeFSdngQy5OB7zjjjHgW0VWHnj+eqyGuq+vwplFwDTHM
+        aMamqzY+CbJOD+wJBG04LOh62iBLM8gVOWzcXzNM+utFa7Igv8LR+dtTFtV3uVR51qHqsxbtCqk8Y1HD
+        eZsexy6UKlX6aqOg8tM2xjjO9qni2HM2lf/bpJ2ndFoAz5KqNFq+X1Dlvwza+YFBr/8jxx9xX/5Pk7a9
+        b/hzTxLk+1AV/AMT+u0EUA/cz97ChzT2oUkxETwWHOQ41vessK8g7G1T+ZB/GsQDovZWomNpJGqqOCY/
+        ttB4PgUFcdrKTzv0lz6POq44wEWRBxzpduhkv0dPtGHJ4Kz3omCPou8Ex6Hl62O4br1o0sEujfadFXQP
+        lpWzuuqgoGOXTNp/zqADXQa922VSKzgIjp7X6Q8f6JOXLCrqkwmP/jOY8c9EbHjDHs5BIIOP6E0U+4+P
+        pf2iXoSi5sPb1XB8xAcfV92E4anY1gYtxImRi/oZGOMojNFQDUqPGyOucUYa0XV67xIOclMJ4m3vQYzA
+        adBMw/BCNBPu7Q1g2weCeNvL2N4Wb/kwxoA19CcUSqU0utxvTNj2NoyxNxGciZLY/imQ6NewGwW2/TSC
+        Ons8GsTbsvtatu2bHsMCR/BJyBkjjqBwb98Y4T9sippIw180kjHJR4mcoJI2ZJONECIV9DMqkHFvIXZa
+        Y+zsZUHBsdTCMkUIZOBWQZrv1HBnODqL0jT8QcA5WQHd/XpOEB/Q4EtJHFmVJISEJCHKgoMfLiBoJYra
+        /2//Hgp6AB9WHQLScOoIgWzwmTpfkGw4/ukwylASk7IDpyCIM7QwFLS2VQvO1DhHp1I5ErjnmmrLCcqy
+        FilW/Kvl8QaP4lWJmw82qTeWtqhjS1sUwG3AI81B37x6ZQw7YmxWrTz2jWZl7BEeC1ncKI8tblLGuQMx
+        HDu3Th5bgvtFjbmxiIfAfQ3yDZ6bNbAWKbbh1/H4gexu7pDextJNRyP8ilOLtuB4HhzDsfybQuPjNCCO
+        E3Ig+xZrkWJLVsRiG38TQ7q2zlj/6g5QFraTiINYSKHxfKI4/k2h8ZAy/5klpS/5GpasiP0XxZ+/dPeD
+        s4MAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="losyButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAC4AAAAjCAYAAADrJzjpAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAA6uSURBVFhHfVgLcFTVGf7vI5tNAiEQwNqx9dHO9KEOBaSG
+        0enYai2tWpUqTJ1On9KHjxnKDHawKkSC1UAISTbZvffubkISUEh4Ka9IKs82CqUitAKBZPfezXvzAvJ+
+        7Pb7z94NCYbemX/O+5zv/8/3/+fcQw899BAtXryYnnvuOVqyZAktXbp0gnAdt3G/u+++mzIyMmjevHk0
+        f/786+ncuTTnO3Npyn2LKGHBE+RY8BglLngc6eOyA+VpGY+lpt3/2MPpDzz5cPqDT9067YGnKGXhU5TE
+        kiFSKXnhU2pyxpMsUsJ9jxFLcsZPKeXBZyjxmxkkPkmKpfxVVFTQ6dOnaXBwkKLR6BckEomItLe3l7Zt
+        20Z5eXnk8/moqKiICgsLIUhdLsrNd9FMX5CouJPU4jApxWEZQiklrUtTStoaEorDUUdJeySltL07tSxc
+        M60snAN5ekpp+Dbn5nZKKGknhaW4XcI4hceq/lZStw2RsnxLDKysxFL+3nrrLTIMg6qrq6mtrU0owCD7
+        +vrGhMtDQ0PU399P27dvp7ffflsA37RpE23MzaXcjRtp/cZNlF50nsjTQIonqEgei5xa4HsJnmCU3FY0
+        UQsOJXjMEXKbKJtRCaJ4TK4fSNGDJ6cawdwkLfAEymkyxsoeU5GL6kna3EnSC74Y2PHAt27dKoAw+Kqq
+        KmpubqaRkREBcmBgYEy4zEpx2969e8fA5+XlU96mXNqQm0czPReJtEaStZCkagCum0dIawA480yKYX59
+        imE+lKBbI2gfhQxBRiQtFCFPKMqpooWiTt0Ko/+vUCbZHZTl0m6SXiyOgR0PnBdnujAQt9tN+/bto1Ao
+        dFPwnDJ9PvroI3rnnXeoEOML8vMoZ1M+pceAKwBEyXrwl4pmMaAoQBsO3aIk3fxxgl2HPhFIFAoOTzXM
+        PQB8jushrAwrsEpxBwnA5UmBZ2Vl0UZs9c6dOyk7O5tc4OuePXuorq6OhoeHJwCPg2dh3h89elSMKQLX
+        meMALpHWRIm6mQprX44DVAEG1q4F6H67jmWELQxl/ow8pRjWo3a5DmmfQ0deCyyUSq+Q/GKxLMCOB86c
+        5cXZ4rt27aKcnBzBXVbkwoULgttxwDcqEQwGqbi4WFBlk6uQZmq1KlMFnH3dBjdsp1GKpcLKtjBlosmG
+        VTjNa30HFj4MxXpnGPX7bctHU7RAuRKjSgzxBKqAHu8hWrCTvbk2i3bs3EV5+fmUg13YDgqdPXeOBsBt
+        iNTX1y/3DwxIEGpqbqEPwPW169aRruuUW1AoT3dfIFVvuAMc7bIXH4UwWBbmdRz0mLCVQaNR9oU0I3Ag
+        UbfaHJr5ebJuljs8wVFnefftFKOKPAH4Zp9BepGLKt/bSh5XPq3LXE27KraJuk0bsqni3S3SZ6dPqUP9
+        fRQdGaLI8KDU2daiHD5UJfr6dQ/lZgv/UGbrtZSgh3QGA8AjADQMEZydBDRbnBUa4d2AslaaHtjNfQF6
+        MSjzBDgeTSrvXmlzXJ0APFsvow2+LZRViNj87m5aV+inP7+ZTXrFB1ynvLbRLRWUVdLBf5yaGui49pXP
+        Q62J7x8/RSvWbpB5nH/XQSooq5BXZrvoS9rFuZLeMMiLg+OfQm6fYliPQJm4Q8YlwmDtuogEa083Arsd
+        mtXA7fCHZzG2QgLwxLKuM+qL/jhVrp9A0JQcWpAdihLcAUr2NpDDE1DUooCS5GukZE99cqpW/9cUrb4F
+        lhhI85rBJHfdk9hGchohlcdjjIL4S0la0BsHh0hRkKiHuO5ZOCeDFJRhsODyANqPITS2MkUA8kKqEdjP
+        ee7D7di1UQCPqGXd0aSX/Y8IsLJy3eTQdrxIiKkKO5iKRRM9wSVOwwqwRTCpiLcA0YcI0AKv/yHKGBNS
+        OeX+cLCzDEzyCD5HknSrAeFukBVhIEiHmUagwa+RIpKINJqqBzajX4e9A2NKIo4PIxwy8I0CrKyoIuUP
+        HYRgAgUDZJ4QMXhuim4exWTxSTh0jfIi2Pa+6T7rALjbCPlqfDys63DqoXruM9tvnkn3W6eSDCsMhYYY
+        ECsNEXMkG6FXsHu3J2hmDZT4L6z/vm3tuAPzmlEAH5EAPPllf6WIh+Mtjg4yhEHzSZeOUFYErsUdKn7K
+        CUtwngGkeq3DAFWHfp9AERl8lbEDlOINneJ21PVP9VpX033msVv85s5Z/uD7oFgNxjTZc6IPXwPMLkSS
+        VdjFa+PWuC4C+JVo0ku+9wS5J1IldjwD8K8BvIUBQ3hyscCNwu2wYjdibwXnQYcc1Aurg0KZXIcTs8ep
+        meW4r/RwGSGuPdVrnp7lN3fPLjaNGT5z4xQjuBLWngVZbs89FvPHRFCFgXvXCLDjqYJJ0zF4P3fENvJ9
+        Icav2GBxlxhXZolb/WCiEarlOhwiz8DqzPG7YPkrTAco9D3Q7X7bMZkmEXA/wpaG5S9jzZ+jH2Fsnj3v
+        jcAjHFUSSruGnS/57hVgZSV2gvI3RQ/uEFbRzGNwlgxYbas9ELy2+HAYD5qjAg4LPjRCTWx1VgLKt0Bu
+        RxsDcfF8AHUV9DiA3eTLFB9EHOYq0L4Q5U6eG+u9gvIqe+448Dg9Rxh4UllnufKin6EqAC4wiw/AhsDJ
+        ETjLt2MLm+t5EVhqNEUPvArL3AZQp7kOEkF+EJa9yoCn+awSRJ0LULYOFn4Xi/EOfhNK9bLVAXQxDJLL
+        eR6PdQYA9IcAnM1l1Pehz3qM64cIw9gS6+8ODCWWds6Z9OTEQle5IxYvBM/dACxOMixwEguxYg6AOhuz
+        stUExRag7cusLLZ8Lw6Yv031mmVI/465foa5mOtuXhjOuwUR42GME1xngdIm+n7Ma7LycOIj6F/D83M7
+        FNmO+au57PTUe256V8FE7/EATBSPHiKFA8IaVhEs/imXuQ8m9DAvnVowg60IZ84HZ3mOTwBwN9oPczsU
+        +BobhMdM85oH0SfMeRb0PQvleYxbrKOFumb4Yhj4yov1ZmNeQ0QdT+DOm94OscDD7ECYhLk1wUHsxXjr
+        4sqEsc37cAnqh2+cmOYNLkRMngGLPYodGEU7O94ijOHQ+gs+B5D+Ejt2J+jDV1pBA9QdTTXMSs7blKvC
+        KRyA0r3TjOA8Vhp98uz7uDLpfZzpAJ7WMMg4wHHCighn4UX5kODYi6vnDvxqncDYCACxk1XC4n7eXgD/
+        AApwmMVVwnocoDsQCvfDgl0MktcBsPOo+w3Gi/CLOVpg9Q9jeWsA7XB28xY4JwOXJgXOC2CxP/LW2yDH
+        AxfOwoCxjd0AvI/vy7BkL2QAfOSo0ciAAL4KII/z7oEy3+V52Sg4lKbDoi8jfO4Gn9sQQqOwbnSK13oU
+        db9gxaHoICJUPfrDqa3oFD2wAvOS6g6oamkX2VHli8BxXM+EtLHGNliRMmAoNIy7xD9nGvV7YO0moQTu
+        z3Dk+wAS1wPzVe4Pa0ewzdvB3dYkI1TBXCeX5aACSyIX8u4GXP6tVKkw+IjisfIhn0tFpkmFVhT9IAiz
+        RY1R1WislvVmB3ma8ePdKFFZH9FLpTGw44FjUZUXgdXzbOCC53yxArhL6XrdDqTx/0HBd7YqeP0X8PT3
+        2Ilm7g/hw2sAR/i72OpmRJp7frSnkZ7c16w8/kGT+v1tl5WfvN9IT1e100/3NtOiHfXSs/ubvr50f8Oz
+        S/Y35j29x9y+aOt/ls13f5w4x32SFng/le4t+AfNK/4v3fGnDTbY6+ePuKvErG7dg60SFyJs02i6fvkk
+        LP1vBsVWZsAMjsVWgHdDcJbzEDEW81i4ytbcVd6Q13PtKkWHetWORpMaLp2n6OiQFB0dVprqa9UrrY3S
+        wJUO6usM0/DVThpG3qr9nKr37pH1/BypTC+iEo+LStwF9MLzv4lhvQE4i8JWxzaX8OKwYj8L5+F0lYgc
+        B2xw4j4NcNewQ+1chow5NO8E5omQOzR6W4l5sTHcqfb09lJruF3q6eujoZFROn+xloKmRe0dndTS2ia3
+        hdvV9s4utaOrW4Gol+rqpYMfHqK8AhcVuj1UtmUr/e75ZTGskwAXVodH465h8f+iAAP+ZrJCcLxvoL5f
+        HAqa+RmAzwZwFelFVoQtj6twEfr9AI55BNyM3uKtqzvx8UlHZ3s7ATz+V/uovr6eAoEAdXZ2isendrR1
+        dXVNkO7ubvETfvjwYSooKKCSkhJavnx5DOskwIXVOYXVn49TAPljiBx/wKHwL1aE6wDsEEA7QYdnQKke
+        oQxOQ9SlQBF21jLSm6Kz3efXGaVb6JOafyotra3U09NDDQ0N1NHRcVPQcWHwlmWJ54/S0lJatuzmFh8D
+        zxYGuCIbqO2oYzwWMR0ABwFa0MauH03xWscR4uoQeRDbraxZRp36dm4B+b2GdPzECWpqahJPHAw6HA5P
+        Cni8XLlyRTxMnTlzhlasWBHD+n+ASwAjIdzJiMkHbWB9kDEe87HMKdq4joWvvqIdu3AMFv8W6Y2U6q5V
+        CjQvufLzyA2uHjlyRFiRLc9WnwzsjcKUunbtmnho5U8Z9x9xI3CWON/TYNkzNnjx34ij/iNweQFCYZZN
+        J7EjoNIlXAGegFI8XuJnuDTtsrRuQy55igrJVQhxucTDKvOcwU8G9EZhOvFz35YtsdfaicDFy+gXRObX
+        Vvz934m/9xDyUdVjclz/AVJyegK/lVFO8AS7nFrgVfzxO7k/RFE8poyTlKZrl8hl+ClnfTblw8nir7sH
+        Dhyg2tpaYUm2KFuf08mEKcXPgPwwy98E4JKvbXLxtymE1OFvnaP621qQjyb42xqTi1vOOvwtw8n+Zi3B
+        33Kr5A+jb1iW0R9jCCmRr53SfCHSSsqpvHTzGHB+V+dIEQcff9ob/6Q9Xlg5fqOsrKwUWCcAT3nz75TM
+        kllNSZmHKGlNTJxrPmRRHKuRvn7gG7PWHSqdkVV9duabVR+mZR68LwntiasPyYmrq9TEN6okxxtVhJSc
+        q6vIsaaaZq7ZT69lZtHazExau3YtrVy5klatWkVr1qwReX4Z5sfVkydPUk1NzaRyAk597tw5Wr9+vcB6
+        3TmJ/gcMjkOVQv76pAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
