vytvorTabulku() + generujTabulku() + saveDialog

--- a/TabulkyForm.resx
+++ b/TabulkyForm.resx
@@ -258,6 +258,9 @@
         9A+rrR+ytA8y9/MvBOFM4IHPLbfu/X/WtQZFjjQQ2AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="generujTabulkuSaveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAB+ZgAAZgAAAICAAAABACAAKAgBAORmAABAQAAAAQAgAChCAAAMbwEAMDAAAAEA
